--- a/c_asm/README
+++ b/c_asm/README
@@ -1,6 +1,6 @@
 To use this, choose an existing .fst file (or write a new one).
 
-./gen.sh 1.fst | gcc -x c -o fst -
+./gen.sh 1.fst | gcc -O3 -x c -o fst -
 
 And use it with :
 ./fst STAR
