--- a/report/report.tex
+++ b/report/report.tex
@@ -148,4 +148,20 @@
 \lstinputlisting[style=customc, caption=Code C généré pour la FST définie dans \autoref{tab:fst2},label=lst:cfst2]{../c_asm/gen_c_fst2.c}
 
 
+\clearpage
+\subsection{Générer à la volée du code assembleur x86}
+\subsubsection{Script shell}
+
+\lstinputlisting[style=custombash, caption=Script pour générer un code assembleur x86 à la colée d'une FST, label=lst:bashgenasm]{../c_asm/gen_asm.sh}
+
+\clearpage
+\subsubsection{Code assembleur x86 généré pour la FST définié dans le \autoref{tab:fst1}}
+
+\lstinputlisting[style=customasm, caption=Code assembleur x86 généré pour la FST définie dans \autoref{tab:fst1}, label=lst:asmfst1]{../c_asm/gen_asm_fst1.asm}
+
+\clearpage
+\subsubsection{Code assembleur x86 généré pour la FST définié dans le \autoref{tab:fst2}}
+
+\lstinputlisting[style=customasm, caption=Code assembleur x86 généré pour la FST définie dans \autoref{tab:fst2}, label=lst:asmfst2]{../c_asm/gen_asm_fst2.asm}
+
 \end{document}
