MINOR : macro content for pdf

--- a/report/preamble.tex
+++ b/report/preamble.tex
@@ -94,12 +94,12 @@
     pdfmenubar=true,        % show Acrobat’s menu?
     pdffitwindow=false,     % window fit to page when opened
     pdfstartview={FitH},    % fits the width of the page to the window
-    pdftitle={Template},    % title
+    pdftitle={Finite State Transducer Just-In-Time Compiling},    % title
     pdfauthor={Émilien Boulben, Victor Delépine, Corentin Peuvrel},     % author
     pdfsubject={FST, bytecode, optimisation},   % subject of the document
     pdfcreator={Émilien Boulben},   % creator of the document
     pdfproducer={Émilien Boulben}, % producer of the document
-    pdfkeywords={template}, % list of keywords
+    pdfkeywords={FST, assembler, bytecode, just, time, java}, % list of keywords
     pdfnewwindow=true,      % links in new window
     colorlinks=true,       % false: boxed links; true: colored links
     linkcolor=black,          % color of internal links (change box
