--- a/java/first_test/README
+++ b/java/first_test/README
@@ -1,5 +1,3 @@
 To launch :
 
-javac HelloWorldGenerator.java &&  java HelloWorldGenerator > HelloWorld.java 
-javac HelloWorld.java && java HelloWorld
-
+javac Launcher.java && java Launcher > HelloWorld.java && javac HelloWorld.java && java HelloWorld
